@@ -1,6 +1,6 @@
 {
   "name":    "simp-useradd",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author":  "SIMP Team",
   "summary": "A SIMP puppet module for managing settings regarding users and user creation",
   "license": "Apache-2.0",
@@ -49,8 +49,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": "4.6"
+      "version_requirement": ">= 4.6.0 < 5.0.0"
     }
-  ],
-  "data_provider": "hiera"
+  ]
 }
